--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Отзывы казино</title>
-<link rel="canonical" href="https://casino-list.deno.dev/index.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/index.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
