--- a/osobennosti-igornogo-biznesa-v-ukraine-dnevnik-olg.html
+++ b/osobennosti-igornogo-biznesa-v-ukraine-dnevnik-olg.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Особенности игорного бизнеса в Украине ✌ Дневник @Olga1 на</title>
 <meta name="description" content="Особенности игорного бизнеса в Украине ✌ Дневник @Olga1 на Наконец-то на сайте Министерства финансов Украины был опубликован такой долгожданный текст законо…">
-<link rel="canonical" href="https://casino-list.deno.dev/osobennosti-igornogo-biznesa-v-ukraine-dnevnik-olg.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/osobennosti-igornogo-biznesa-v-ukraine-dnevnik-olg.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,10 +16,10 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Особенности игорного бизнеса в Украине ✌ Дневник @Olga1 на</h1>
-<div class="card"><p>Особенности игорного бизнеса в Украине ✌ Дневник @Olga1 на <br><br><br><br>Наконец-то на сайте Министерства финансов Украины был опубликован такой долгожданный текст законопроекта «Об азартных играх». Данный акт сделает легальными лотереи, букмекерскую деятельность и игорные дома.<br><br>Реализация государственной политики в сфере гемблинга будет одной из обязанностей национальной службы азартных игр. Направлять и координировать деятельность данного подразделения будет Министерство финансов Украины и непосредственно Кабинет Министров Украины. Итак,легализация игорного бизнеса в Украиненачалась!<br><br>ФУНКЦИИ НАЦИОНАЛЬНОЙ СЛУЖБЫ АЗАРТНЫХ ИГР<br><br>ТРЕБОВАНИЯ К ОБЪЕКТАМ АЗАРТНОГО БИЗНЕСА<br><br>Чтобы заниматься букмекерской деятельностью на территории Украины, необходимо иметь соответствующую лицензию. Ставки букмекеры у своих клиентов будут иметь право принимать только наличными. Проводить пари можно и в онлайн режиме, то есть в интернете, но и такая деятельность становится возможной только после строй сертификации.<br><br>Казино может располагаться только на территории пятизвездочного и четырехзвездочного отеля, с количеством номеров не менее ста штук (для Киева – 200).<br><br>Чтобыорганизовывать лотерею в Украине, ее организатор должен обладать международным опытом подобной деятельности не менее <a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> чем в трех других странах мира.<br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Особенности игорного бизнеса в Украине ✌ Дневник @Olga1 на <br><br><br><br>Наконец-то на сайте Министерства финансов Украины был опубликован такой долгожданный текст законопроекта «Об азартных играх». Данный акт сделает легальными лотереи, <a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> букмекерскую деятельность и игорные дома.<br><br>Реализация государственной политики в сфере гемблинга будет одной из обязанностей национальной службы азартных игр. Направлять и координировать деятельность данного подразделения будет Министерство финансов Украины и непосредственно Кабинет Министров Украины. Итак,легализация игорного бизнеса в Украиненачалась!<br><br>ФУНКЦИИ НАЦИОНАЛЬНОЙ СЛУЖБЫ АЗАРТНЫХ ИГР<br><br>ТРЕБОВАНИЯ К ОБЪЕКТАМ АЗАРТНОГО БИЗНЕСА<br><br>Чтобы заниматься букмекерской деятельностью на территории Украины, необходимо иметь соответствующую лицензию. Ставки букмекеры у своих клиентов будут иметь право принимать только наличными. Проводить пари можно и в онлайн режиме, то есть в интернете, но и такая деятельность становится возможной только после строй сертификации.<br><br>Казино может располагаться только на территории пятизвездочного и четырехзвездочного отеля, с количеством номеров не менее ста штук (для Киева – 200).<br><br>Чтобыорганизовывать лотерею в Украине, ее организатор должен обладать международным опытом подобной деятельности не менее чем в трех других странах мира.<br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osnovy-bankroll-menedzhmenta-dnevnik-anna-na.html">Основы банкролл менеджмента ✌ Дневник @Anna на</a></li>
-<li><a href="osnovy-kartochnoy-igry-v-golf-dnevnik-ronik-na.html">Основы карточной игры в гольф ✌ Дневник @ronik на</a></li>
+<li><a href="osnovnye-preimuschestva-soversheniya-elektronnyh-p.html">Основные преимущества совершения электронных платежей в интернет казино ✌ Дневник @Tamila1 на</a></li>
+<li><a href="osobennosti-vyplat-v-blekdzheke-dnevnik-maks8-na.html">Особенности выплат в блэкджеке ✌ Дневник @Maks8 на</a></li>
 <li><a href="osnovnye-sekrety-onlayn-igrovyh-avtomatov-i-video-.html">Основные секреты онлайн игровых автоматов и видео-слотов ✌ Дневник @Tamila1 на</a></li>
 </ul></div>
 </body>
