--- a/osobennosti-populyarnyh-variaciy-blekdzheka-dnevni.html
+++ b/osobennosti-populyarnyh-variaciy-blekdzheka-dnevni.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на</title>
 <meta name="description" content="Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на Vegas Strip Blackjack называют самой популярной в мире вариацией блэкджека, так сказать, канон…">
-<link rel="canonical" href="https://casino-list.deno.dev/osobennosti-populyarnyh-variaciy-blekdzheka-dnevni.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/osobennosti-populyarnyh-variaciy-blekdzheka-dnevni.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на</h1>
-<div class="card"><p>Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на <br><br><br><br>Vegas Strip Blackjack называют самой популярной в мире вариацией блэкджека, так сказать, канонической для всех заведений, учитывая и виртуальные, и наземные. Не менее популярен и Atlantic City Blackjack. Давайте сравним этивариации игры в блэкджек.<br><br>ОТЛИЧИТЕЛЬНЫЕ ЧЕРТЫ VEGAS STRIP BLACKJACK<br><br>ОТЛИЧИТЕЛЬНЫЕ ЧЕРТЫ  ATLANTIC CITY BLACKJACK<br><br>Используются две колоды карт.<br><br>При комбинации из карты достоинством в десять очков и туза дилер объявляет блэкджек.<br><br>Игрок при блэкджеке вскрывается не сразу.<br><br>Дилер должен остановиться при мягких семнадцати.<br><br>Дабл даун возможен только при руках в одиннадцать, десять или девять очков.<br><br>Любые две карты позволяют сделать дабл даун, также он становится возможен после сплита (разделение).<br><br>Сплитование разрешено делать только один раз за раздачу.<br><br>Сплит разрешается делать <a href="https://t.me/AUF_gameS_official" target="_blank">https://t.me/AUF_gameS_official</a> не более 3-х раз.<br><br>Если достоинство карт ниже десяти очков, то сплит делать нельзя.<br><br>Если комбинация состоит из тузов, то сплитовать можно только один раз.<br><br>Для сплита с тузом можно использовать только одну карту.<br><br>Если после сплита игрок получил двадцать одно очко, то блэкджеком это не считается.<br><br>Блэкджек оплачивается в соотношении шесть к пяти или три к двум.<br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на <br><br><br><br>Vegas Strip Blackjack называют самой популярной в мире вариацией блэкджека, так сказать, канонической для всех заведений, учитывая и виртуальные, и наземные. Не менее популярен и Atlantic City Blackjack. Давайте сравним этивариации игры в блэкджек.<br><br>ОТЛИЧИТЕЛЬНЫЕ ЧЕРТЫ VEGAS STRIP BLACKJACK<br><br>ОТЛИЧИТЕЛЬНЫЕ ЧЕРТЫ  ATLANTIC CITY BLACKJACK<br><br>Используются две колоды карт.<br><br>При комбинации из карты достоинством в десять очков и туза дилер объявляет блэкджек.<br><br>Игрок при блэкджеке вскрывается не <a href="https://t.me/AUF_gameS_official" target="_blank">https://t.me/AUF_gameS_official</a> сразу.<br><br>Дилер должен остановиться при мягких семнадцати.<br><br>Дабл даун возможен только при руках в одиннадцать, десять или девять очков.<br><br>Любые две карты позволяют сделать дабл даун, также он становится возможен после сплита (разделение).<br><br>Сплитование разрешено делать только один раз за раздачу.<br><br>Сплит разрешается делать не более 3-х раз.<br><br>Если достоинство карт ниже десяти очков, то сплит делать нельзя.<br><br>Если комбинация состоит из тузов, то сплитовать можно только один раз.<br><br>Для сплита с тузом можно использовать только одну карту.<br><br>Если после сплита игрок получил двадцать одно очко, то блэкджеком это не считается.<br><br>Блэкджек оплачивается в соотношении шесть к пяти или три к двум.<br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-onlayn-ruletok-dnevnik-igor-na.html">Особенности онлайн-рулеток ✌ Дневник @igor на</a></li>
-<li><a href="osobennosti-igry-v-virtualnuyu-ruletku.html">Особенности игры в виртуальную рулетку</a></li>
+<li><a href="osobennosti-bitkoin-kazino-dnevnik-anna-na.html">Особенности биткоин казино ✌ Дневник @Anna на</a></li>
 <li><a href="osobennosti-vip-programm-v-igornyh-zavedeniyah-onl.html">Особенности VIP-программ в игорных заведениях онлайн ✌ Дневник @Tamila1 на</a></li>
+<li><a href="osobennosti-igornyh-pokoleniy-dnevnik-olia29-na.html">Особенности игорных поколений ✌ Дневник @Olia29 на</a></li>
 </ul></div>
 </body>
 </html>
