--- a/ostavshiesya-kazino-v-moskve.html
+++ b/ostavshiesya-kazino-v-moskve.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Оставшиеся казино в Москве</title>
 <meta name="description" content="Оставшиеся казино в Москве Для россиян 2003-й год остался памятен шквальным ростом игорных заведений, которые с поразительной скоростью заполнили город. Зат…">
-<link rel="canonical" href="https://casino-list.deno.dev/ostavshiesya-kazino-v-moskve.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/ostavshiesya-kazino-v-moskve.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Оставшиеся казино в Москве</h1>
-<div class="card"><p>Оставшиеся казино в Москве <a href="https://t.me/Beton_guide_casinO" target="_blank">https://t.me/Beton_guide_casinO</a><br><br><br><br>Для россиян 2003-й год остался памятен шквальным ростом игорных заведений, которые с поразительной скоростью заполнили город. Зато буквально с начала 2004 года также стремительно они стали закрываться. Самые известные из банкротов - "Голицын", "Арлекино", «Камилла», «Гранд При», «Измайлово» - не выдержали конкуренции и были ликвидированы. Но по предварительным данным, это только начало и скоро той, же участи удостоятся еще несколько крупных домов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Оставшиеся казино в Москве<br><br><br><br>Для россиян 2003-й год остался памятен шквальным ростом игорных заведений, которые с поразительной скоростью заполнили город. Зато буквально с начала 2004 года также стремительно они стали закрываться. Самые известные из <a href="https://t.me/Beton_guide_casinO" target="_blank">https://t.me/Beton_guide_casinO</a> банкротов - "Голицын", "Арлекино", «Камилла», «Гранд При», «Измайлово» - не выдержали конкуренции и были ликвидированы. Но по предварительным данным, это только начало и скоро той, же участи удостоятся еще несколько крупных домов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-ruletki-dnevnik-tamila1-na.html">Особенности рулетки ✌ Дневник @Tamila1 на</a></li>
-<li><a href="osobye-pravila-etiketa-pri-igre-v-ruletku-dnevnik-.html">Особые правила этикета при игре в рулетку ✌ Дневник @Tamila1 на</a></li>
-<li><a href="osobennosti-populyarnyh-variaciy-blekdzheka-dnevni.html">Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на</a></li>
+<li><a href="osobennosti-kitayskih-kazino-oflayn-i-onlayn.html">Особенности китайских казино офлайн и онлайн</a></li>
+<li><a href="osobennosti-offlayn-puteshestviya-dnevnik-abstint-.html">Особенности оффлайн путешествия ✌ Дневник @Abstint на</a></li>
+<li><a href="osobennosti-igornogo-biznesa-v-zapadnoevropeyskih-.html">Особенности игорного бизнеса в западноевропейских странах ✌ Дневник @Tamila1 на</a></li>
 </ul></div>
 </body>
 </html>
