--- a/ostrova-antigua-i-barbada-protiv-ameriki.html
+++ b/ostrova-antigua-i-barbada-protiv-ameriki.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Острова Антигуа и Барбада против Америки.</title>
 <meta name="description" content="Острова Антигуа и Барбада против Америки. Америка всегда имела преимущество перед ВТО (Всемирной Торговой Организацией). Но в последнем споре об интерактивн…">
-<link rel="canonical" href="https://casino-list.deno.dev/ostrova-antigua-i-barbada-protiv-ameriki.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/ostrova-antigua-i-barbada-protiv-ameriki.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Острова Антигуа и Барбада против Америки.</h1>
-<div class="card"><p>Острова Антигуа и Барбада против Америки. <a href="https://t.me/Vodka_fun_officiaL" target="_blank">https://t.me/Vodka_fun_officiaL</a><br><br><br><br>Америка всегда имела преимущество перед ВТО (Всемирной Торговой Организацией). Но в последнем споре об интерактивной промышленности на островах Антигуа и Барбада, согласно размышлениям специалистов, больше шансов выиграть у ВТО.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p><a href="https://t.me/Vodka_fun_officiaL" target="_blank">https://t.me/Vodka_fun_officiaL</a> Острова Антигуа и Барбада против Америки.<br><br><br><br>Америка всегда имела преимущество перед ВТО (Всемирной Торговой Организацией). Но в последнем споре об интерактивной промышленности на островах Антигуа и Барбада, согласно размышлениям специалистов, больше шансов выиграть у ВТО.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-igornyh-zavedeniy-s-mgnovennymi-vyplat.html">Особенности игорных заведений с мгновенными выплатами ✌ Дневник @igor на</a></li>
-<li><a href="osobennosti-slotov-sizzling-hot-dnevnik-tamila1-na.html">Особенности слотов Sizzling Hot ✌ Дневник @Tamila1 на</a></li>
-<li><a href="ostorozhno-kazino-manipuliruet-igrokami-dnevnik-ig.html">Осторожно! Казино манипулирует игроками! ✌ Дневник @igor на</a></li>
+<li><a href="osobennosti-turnirov-po-blekdzheku-dnevnik-olga1-n.html">Особенности турниров по блэкджеку ✌ Дневник @Olga1 на</a></li>
+<li><a href="osobennye-usloviya-igry-dlya-hayrollerov-dnevnik-c.html">Особенные условия игры для хайроллеров ✌ Дневник @casino-x на</a></li>
+<li><a href="osobennosti-sistemy-ams-igry-v-ruletku-dnevnik-olg.html">Особенности системы AMS  игры в рулетку ✌ Дневник @Olga1 на</a></li>
 </ul></div>
 </body>
 </html>
