--- a/osudili-ukrainskoe-kazino-i-oshtrafovali.html
+++ b/osudili-ukrainskoe-kazino-i-oshtrafovali.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Осудили украинское казино и оштрафовали.</title>
 <meta name="description" content="Осудили украинское казино и оштрафовали. На 60 тысяч евро было оштрафовано украинское казино. ООО «Сан» в период с 2006 года по 2008 год, в течении двух лет…">
-<link rel="canonical" href="https://casino-list.deno.dev/osudili-ukrainskoe-kazino-i-oshtrafovali.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/osudili-ukrainskoe-kazino-i-oshtrafovali.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Осудили украинское казино и оштрафовали.</h1>
-<div class="card"><p>Осудили украинское казино и оштрафовали.<br><br><br><br>На 60 тысяч евро было оштрафовано украинское казино. ООО «Сан» в период с 2006 года по 2008 год, <a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> в течении двух лет, занималось игорным бизнесом без лицензирования.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p><a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> Осудили украинское казино и оштрафовали.<br><br><br><br>На 60 тысяч евро было оштрафовано украинское казино. ООО «Сан» в период с 2006 года по 2008 год, в течении двух лет, занималось игорным бизнесом без лицензирования.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
 <li><a href="ostorozhno-kazino-odnodnevki-vedut-ohotu-na-vas-dn.html">Осторожно: казино-однодневки ведут охоту на Вас ✌ Дневник @Dima3 на</a></li>
-<li><a href="osobennosti-razdachi-ochkov-loyalnosti-v-igrah-kaz.html">Особенности раздачи очков лояльности в играх казино ✌ Дневник @igor на</a></li>
-<li><a href="osobennosti-populyarnyh-variaciy-blekdzheka-dnevni.html">Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на</a></li>
+<li><a href="osobennosti-offlayn-puteshestviya-dnevnik-abstint-.html">Особенности оффлайн путешествия ✌ Дневник @Abstint на</a></li>
+<li><a href="osobennosti-ruletki-dnevnik-tamila1-na.html">Особенности рулетки ✌ Дневник @Tamila1 на</a></li>
 </ul></div>
 </body>
 </html>
