--- a/osuzhdenie-inspektora-za-prodazhu-fishek-iz-kazino.html
+++ b/osuzhdenie-inspektora-za-prodazhu-fishek-iz-kazino.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Осуждение инспектора за продажу фишек из казино</title>
 <meta name="description" content="Осуждение инспектора за продажу фишек из казино Один из бывших служащих государственного агентства США надзора за казино пользовался своим служебным положен…">
-<link rel="canonical" href="https://casino-list.deno.dev/osuzhdenie-inspektora-za-prodazhu-fishek-iz-kazino.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/osuzhdenie-inspektora-za-prodazhu-fishek-iz-kazino.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Осуждение инспектора за продажу фишек из казино</h1>
-<div class="card"><p>Осуждение инспектора за <a href="https://t.me/Daddy_web_officiaL" target="_blank">https://t.me/Daddy_web_officiaL</a> продажу фишек из казино<br><br><br><br>Один из бывших служащих государственного агентства США надзора за казино пользовался своим служебным положением в целях собственной выгоды. Он распространял среди коллекционеров фишки казино, которые ему приходилось инспектировать по долгу службы. В итоге он продал фишек казино на сумму примерно 100 тысяч долларов США. Мошенник, Стив Барбер, был обвинен в завладении обманным путем общественного имущества и еще в 5-и должностных преступлениях.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Осуждение инспектора <a href="https://t.me/Daddy_web_officiaL" target="_blank">https://t.me/Daddy_web_officiaL</a> за продажу фишек из казино<br><br><br><br>Один из бывших служащих государственного агентства США надзора за казино пользовался своим служебным положением в целях собственной выгоды. Он распространял среди коллекционеров фишки казино, которые ему приходилось инспектировать по долгу службы. В итоге он продал фишек казино на сумму примерно 100 тысяч долларов США. Мошенник, Стив Барбер, был обвинен в завладении обманным путем общественного имущества и еще в 5-и должностных преступлениях.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osnovy-igry-v-blekdzhek-dnevnik-ronik-na.html">Основы игры в блэкджек ✌ Дневник @ronik на</a></li>
-<li><a href="osobennosti-igornogo-biznesa-v-centralno-aziatskom.html">Особенности игорного бизнеса в центрально-азиатском регионе ✌ Дневник @Tamila1 на</a></li>
-<li><a href="ostorozhno-fishing-stop-moshennichestvu-dnevnik-ma.html">Осторожно фишинг. Стоп мошенничеству ✌ Дневник @Maks8 на</a></li>
+<li><a href="ostavshiesya-kazino-v-moskve.html">Оставшиеся казино в Москве</a></li>
+<li><a href="osobye-pravila-etiketa-pri-igre-v-ruletku-dnevnik-.html">Особые правила этикета при игре в рулетку ✌ Дневник @Tamila1 на</a></li>
+<li><a href="ostrov-sokrovisch-teper-pereedet-v-podolsk.html">Остров сокровищ теперь переедет в Подольск.</a></li>
 </ul></div>
 </body>
 </html>
