--- a/ot-vozmozhnosti-vyigrysha-italyanec-popal-v-bolnic.html
+++ b/ot-vozmozhnosti-vyigrysha-italyanec-popal-v-bolnic.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>От возможности выигрыша итальянец попал в больницу</title>
 <meta name="description" content="От возможности выигрыша итальянец попал в больницу Недавно в больницу попал итальянский пенсионер. Причиной его недомогания стало известие о том, что он упу…">
-<link rel="canonical" href="https://casino-list.deno.dev/ot-vozmozhnosti-vyigrysha-italyanec-popal-v-bolnic.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/ot-vozmozhnosti-vyigrysha-italyanec-popal-v-bolnic.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>От возможности выигрыша итальянец попал в больницу</h1>
-<div class="card"><p>От возможности выигрыша итальянец попал в больницу<br><br><br><br>Недавно в больницу попал итальянский пенсионер. Причиной его недомогания стало известие <a href="https://t.me/New_Retro_Vip_casino" target="_blank">https://t.me/New_Retro_Vip_casino</a> о том, что он упустил свою возможность выиграть джекпот, который по сумме составляет 66 миллионов евро. Джекпот достиг своей величины, пройдя 44 розыгрыша, которые начались в феврале месяце нынешнего года.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>От возможности выигрыша итальянец попал в больницу<br><br><br><br>Недавно в больницу попал итальянский пенсионер. Причиной его <a href="https://t.me/New_Retro_Vip_casino" target="_blank">https://t.me/New_Retro_Vip_casino</a> недомогания стало известие о том, что он упустил свою возможность выиграть джекпот, который по сумме составляет 66 миллионов евро. Джекпот достиг своей величины, пройдя 44 розыгрыша, которые начались в феврале месяце нынешнего года.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-professii-krupe-dnevnik-dak89-na.html">Особенности профессии крупье ✌ Дневник @Dak89 на</a></li>
-<li><a href="ostorozhno-shulery-dnevnik-dima3-na.html">Осторожно! Шулеры! ✌ Дневник @Dima3 на</a></li>
-<li><a href="osobennosti-bitkoin-kazino-dnevnik-anna-na.html">Особенности биткоин казино ✌ Дневник @Anna на</a></li>
+<li><a href="osobennosti-igornyh-pokoleniy-dnevnik-olia29-na.html">Особенности игорных поколений ✌ Дневник @Olia29 на</a></li>
+<li><a href="osobennosti-igornogo-biznesa-v-egipte-dnevnik-anna.html">Особенности игорного бизнеса в Египте ✌ Дневник @Anna на</a></li>
+<li><a href="ostrov-mavrikiy-otkryt-dlya-azartnyh-turistov-dnev.html">Остров Маврикий открыт для азартных туристов ✌ Дневник @Olga1 на</a></li>
 </ul></div>
 </body>
 </html>
