--- a/otel-kazino-borgata-vstrechaet-svoego-millionnogo-.html
+++ b/otel-kazino-borgata-vstrechaet-svoego-millionnogo-.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Отель-казино «Боргата» встречает своего миллионного клиента.</title>
 <meta name="description" content="Отель-казино «Боргата» встречает своего миллионного клиента. Казино «Боргата», находящееся в Атлантик-Сити, приветствует своего миллионного игрока. Столь ра…">
-<link rel="canonical" href="https://casino-list.deno.dev/otel-kazino-borgata-vstrechaet-svoego-millionnogo-.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/otel-kazino-borgata-vstrechaet-svoego-millionnogo-.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Отель-казино «Боргата» встречает своего миллионного клиента.</h1>
-<div class="card"><p>Отель-казино «Боргата» <a href="https://t.me/Betchan_Review_official" target="_blank">https://t.me/Betchan_Review_official</a> встречает своего миллионного клиента.<br><br><br><br>Казино «Боргата», находящееся в Атлантик-Сити, приветствует своего миллионного игрока. Столь радостное и значимое событие произошло спустя девять месяцев со дня открытия отеля-казино. Решение посетить заведение пришло к госпоже Джон после новости о Гваделупе Лопес. Ранее Лопес в казино «Боргата» выиграла джек-пот размером два миллиона четыреста тысяч долларов на однодолларовом игровом автомате. Даже не успев войти в зал для игры, почётная посетительница выиграла тысячу кредитов для игры на игровых автоматах и обед для двоих в одном из роскошных ресторанов  Borgata Hotel Casino  Spa.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Отель-казино «Боргата» встречает своего миллионного клиента.<br><br><br><br>Казино «Боргата», находящееся в Атлантик-Сити, приветствует своего миллионного игрока. Столь радостное и значимое событие произошло спустя девять месяцев со дня открытия отеля-казино. Решение посетить заведение пришло к госпоже Джон после новости о Гваделупе Лопес. Ранее Лопес в казино «Боргата» выиграла джек-пот размером два миллиона <a href="https://t.me/Betchan_Review_official" target="_blank">https://t.me/Betchan_Review_official</a> четыреста тысяч долларов на однодолларовом игровом автомате. Даже не успев войти в зал для игры, почётная посетительница выиграла тысячу кредитов для игры на игровых автоматах и обед для двоих в одном из роскошных ресторанов Borgata Hotel Casino Spa.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-onlayn-ruletok-dnevnik-igor-na.html">Особенности онлайн-рулеток ✌ Дневник @igor на</a></li>
-<li><a href="osnovy-bankroll-menedzhmenta-dnevnik-anna-na.html">Основы банкролл менеджмента ✌ Дневник @Anna на</a></li>
-<li><a href="osobennosti-igornogo-biznesa-v-egipte-dnevnik-anna.html">Особенности игорного бизнеса в Египте ✌ Дневник @Anna на</a></li>
+<li><a href="ostorozhno-kappery-moshenniki-dnevnik-igor-na.html">Осторожно: капперы мошенники ✌ Дневник @igor на</a></li>
+<li><a href="ostorozhno-dilery-dnevnik-dak89-na.html">Осторожно: дилеры ✌ Дневник @Dak89 на</a></li>
+<li><a href="ostorozhno-fishing-stop-moshennichestvu-dnevnik-ma.html">Осторожно фишинг. Стоп мошенничеству ✌ Дневник @Maks8 на</a></li>
 </ul></div>
 </body>
 </html>
