--- a/ostavlennye-bez-prismotra-deti-v-avtomobile-u-rodi.html
+++ b/ostavlennye-bez-prismotra-deti-v-avtomobile-u-rodi.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Оставленные без присмотра дети в автомобиле у родителей-игроков</title>
 <meta name="description" content="Оставленные без присмотра дети в автомобиле у родителей-игроков Четверо детей в возрасте от одного года до четырнадцати лет были обнаружены полицией штата И…">
-<link rel="canonical" href="https://casino-list.deno.dev/ostavlennye-bez-prismotra-deti-v-avtomobile-u-rodi.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/ostavlennye-bez-prismotra-deti-v-avtomobile-u-rodi.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Оставленные без присмотра дети в автомобиле у родителей-игроков</h1>
-<div class="card"><p>Оставленные без присмотра дети в автомобиле у родителей-игроков<br><br><br><br>Четверо детей в возрасте от одного года до четырнадцати лет были обнаружены полицией штата Индиана, Соединённые Штаты, в автомобиле, припаркованном рядом с казино. Родителями детей оказались игравшие в это время в азартные игры в казино Линн Дэвис и Рэнди Сандовала. За такое поведение родителей привлекут к суду, так как по закону <a href="https://t.me/Lev_games_casinO" target="_blank">https://t.me/Lev_games_casinO</a> штата нельзя оставлять детей без присмотра на длительный период.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Оставленные без <a href="https://t.me/Lev_games_casinO" target="_blank">https://t.me/Lev_games_casinO</a> присмотра дети в автомобиле у родителей-игроков<br><br><br><br>Четверо детей в возрасте от одного года до четырнадцати лет были обнаружены полицией штата Индиана, Соединённые Штаты, в автомобиле, припаркованном рядом с казино. Родителями детей оказались игравшие в это время в азартные игры в казино Линн Дэвис и Рэнди Сандовала. За такое поведение родителей привлекут к суду, так как по закону штата нельзя оставлять детей без присмотра на длительный период.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-vip-programm-v-igornyh-zavedeniyah-onl.html">Особенности VIP-программ в игорных заведениях онлайн ✌ Дневник @Tamila1 на</a></li>
-<li><a href="osobennosti-bitkoin-kazino-dnevnik-anna-na.html">Особенности биткоин казино ✌ Дневник @Anna на</a></li>
-<li><a href="osobennosti-ruletki-hot-spot-dnevnik-olga1-na.html">Особенности рулетки Хот Спот ✌ Дневник @Olga1 на</a></li>
+<li><a href="osobennosti-igornogo-biznesa-v-egipte-dnevnik-anna.html">Особенности игорного бизнеса в Египте ✌ Дневник @Anna на</a></li>
+<li><a href="osobye-pravila-etiketa-pri-igre-v-ruletku-dnevnik-.html">Особые правила этикета при игре в рулетку ✌ Дневник @Tamila1 на</a></li>
+<li><a href="osobennosti-igry-v-shestikolodnyy-blekdzhek-dnevni.html">Особенности игры в шестиколодный блэкджек ✌ Дневник @Anna на</a></li>
 </ul></div>
 </body>
 </html>
