--- a/ostrov-actekov-ischem-klad-vmeste-dnevnik-anna-na.html
+++ b/ostrov-actekov-ischem-klad-vmeste-dnevnik-anna-na.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Остров Ацтеков: ищем клад вместе! ✌ Дневник @Anna на</title>
 <meta name="description" content="Остров Ацтеков: ищем клад вместе! ✌ Дневник @Anna на Сокровища Ацтеков – это видеослот, новое творение разработчика программного обеспечения для казинокомпа…">
-<link rel="canonical" href="https://casino-list.deno.dev/ostrov-actekov-ischem-klad-vmeste-dnevnik-anna-na.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/ostrov-actekov-ischem-klad-vmeste-dnevnik-anna-na.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Остров Ацтеков: ищем клад вместе! ✌ Дневник @Anna на</h1>
-<div class="card"><p>Остров Ацтеков: ищем клад вместе! ✌ Дневник @Anna на <br><br><br><br>Сокровища Ацтеков – это видеослот, новое творение разработчика программного обеспечения для казинокомпании Betsoft.<br><br>Факторы игры и графическое оформление игрового слота – вот стандартная линия всех Gaminator.<br><br>ХАРАКТЕРИСТИКИ СЛОТА<br><br>Оснащен данный автомат пятью барабанами и девятью линиями выплат, этого вполне достаточно для составления выигрышного сочетания символов <a href="https://t.me/Leebet_vip_official_Vip" target="_blank">https://t.me/Leebet_vip_official_Vip</a> на экране Treasures Aztec.<br><br>Специальными символьными знаками этой слот-машины являются:<br><br>Дикий символ также является и  самым оплачиваемым: 5 пирамидок  по игровой полосе умножат ставку игрока в 9 000 раз!<br><br>Слот-машина «Aztec Treasures», наверно, всем знаком своей серией игр Gaminator, но за этим игровым автоматом вы можете получить невероятное удовольствие от бесплатной игры без потерь!<br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Остров Ацтеков: ищем клад вместе! ✌ Дневник @Anna на <br><br><br><br>Сокровища Ацтеков – это видеослот, новое творение разработчика программного обеспечения для казинокомпании Betsoft.<br><br>Факторы игры и графическое оформление игрового слота – вот стандартная линия всех Gaminator.<br><br>ХАРАКТЕРИСТИКИ СЛОТА<br><br>Оснащен данный автомат пятью барабанами и девятью линиями выплат, этого вполне достаточно <a href="https://t.me/Leebet_vip_official_Vip" target="_blank">https://t.me/Leebet_vip_official_Vip</a> для составления выигрышного сочетания символов на экране Treasures Aztec.<br><br>Специальными символьными знаками этой слот-машины являются:<br><br>Дикий символ также является и  самым оплачиваемым: 5 пирамидок  по игровой полосе умножат ставку игрока в 9 000 раз!<br><br>Слот-машина «Aztec Treasures», наверно, всем знаком своей серией игр Gaminator, но за этим игровым автоматом вы можете получить невероятное удовольствие от бесплатной игры без потерь!<br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennye-usloviya-igry-dlya-hayrollerov-dnevnik-c.html">Особенные условия игры для хайроллеров ✌ Дневник @casino-x на</a></li>
-<li><a href="osobennosti-populyarnyh-variaciy-blekdzheka-dnevni.html">Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на</a></li>
-<li><a href="osnovnye-pravila-ruletki-dnevnik-anna-na.html">Основные правила рулетки ✌ Дневник @Anna на</a></li>
+<li><a href="osobennosti-professii-krupe-dnevnik-dak89-na.html">Особенности профессии крупье ✌ Дневник @Dak89 на</a></li>
+<li><a href="osobennosti-onlayn-igry-v-blekdzhek-s-zhivym-krupe.html">Особенности онлайн игры в блэкджек с живым крупье ✌ Дневник @casino-x на</a></li>
+<li><a href="osobennosti-raboty-v-igornom-dome-ili-budni-dilera.html">Особенности работы в игорном доме или будни дилера ✌ Дневник @casino-x на</a></li>
 </ul></div>
 </body>
 </html>
