--- a/ostrov-sokrovisch-teper-pereedet-v-podolsk.html
+++ b/ostrov-sokrovisch-teper-pereedet-v-podolsk.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Остров сокровищ теперь переедет в Подольск.</title>
 <meta name="description" content="Остров сокровищ теперь переедет в Подольск. Известно, что в апреле 2001 года был закрыт Московский игорный дом «остров сокровищ». До сих пор все оборудовани…">
-<link rel="canonical" href="https://casino-list.deno.dev/ostrov-sokrovisch-teper-pereedet-v-podolsk.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/ostrov-sokrovisch-teper-pereedet-v-podolsk.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Остров сокровищ теперь переедет в Подольск.</h1>
-<div class="card"><p>Остров сокровищ теперь переедет <a href="https://t.me/Vovan_free_officiaL" target="_blank">https://t.me/Vovan_free_officiaL</a> в Подольск.<br><br><br><br>Известно, что в апреле 2001 года был закрыт Московский игорный дом «остров сокровищ». До сих пор все оборудование игрового клуба находилось по старому адресу на Зубовском бульваре. Ныне этому оборудованию придется переехать в Подольск, где у него будут новые хозяева. Они выкупили все оборудование, игровые столы, даже сундуки и скелеты вместе с именем самого клуба.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p><a href="https://t.me/Vovan_free_officiaL" target="_blank">https://t.me/Vovan_free_officiaL</a> Остров сокровищ теперь переедет в Подольск.<br><br><br><br>Известно, что в апреле 2001 года был закрыт Московский игорный дом «остров сокровищ». До сих пор все оборудование игрового клуба находилось по старому адресу на Зубовском бульваре. Ныне этому оборудованию придется переехать в Подольск, где у него будут новые хозяева. Они выкупили все оборудование, игровые столы, даже сундуки и скелеты вместе с именем самого клуба.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-igornyh-pokoleniy-dnevnik-olia29-na.html">Особенности игорных поколений ✌ Дневник @Olia29 на</a></li>
-<li><a href="osnovy-kartochnoy-igry-v-golf-dnevnik-ronik-na.html">Основы карточной игры в гольф ✌ Дневник @ronik на</a></li>
-<li><a href="osobennosti-igornyh-zavedeniy-s-mgnovennymi-vyplat.html">Особенности игорных заведений с мгновенными выплатами ✌ Дневник @igor на</a></li>
+<li><a href="osobnyak-dlya-igrovyh-razvlecheniy-u-arbata.html">Особняк для игровых развлечений у Арбата</a></li>
+<li><a href="ostorozhno-fishing-stop-moshennichestvu-dnevnik-ma.html">Осторожно фишинг. Стоп мошенничеству ✌ Дневник @Maks8 на</a></li>
+<li><a href="osobye-pravila-etiketa-pri-igre-v-ruletku-dnevnik-.html">Особые правила этикета при игре в рулетку ✌ Дневник @Tamila1 на</a></li>
 </ul></div>
 </body>
 </html>
