--- a/osuzhdenie-organizatora-nelegalnogo-igornogo-bizne.html
+++ b/osuzhdenie-organizatora-nelegalnogo-igornogo-bizne.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Осуждение организатора нелегального игорного бизнеса</title>
 <meta name="description" content="Осуждение организатора нелегального игорного бизнеса И теперь владельцу ижевского нелегального придется раскошелиться на штраф в сумме 50 тысяч рублей. Согл…">
-<link rel="canonical" href="https://casino-list.deno.dev/osuzhdenie-organizatora-nelegalnogo-igornogo-bizne.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/osuzhdenie-organizatora-nelegalnogo-igornogo-bizne.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Осуждение организатора нелегального игорного бизнеса</h1>
-<div class="card"><p>Осуждение организатора нелегального игорного бизнеса<br><br><br><br>И теперь владельцу ижевского нелегального придется раскошелиться на штраф в сумме 50 <a href="https://t.me/Stake_free_officiaL" target="_blank">https://t.me/Stake_free_officiaL</a> тысяч рублей. Согласно данным пресс-службы Прокуратуры Удмуртской Республики, сей предприниматель открыл игорное заведение, расположив его в подвале одного из домов по улице Красной. Иказинопринесло ему с ноября 2010 г. по январь этого года дохода в 2 миллиона рублей.<br><br>Суд признал ижевчанина виновным в совершении преступления, которое предусмотрено ч. 1 ст. 171 УК РФ (речь о «Незаконном предпринимательстве, то есть осуществлении предпринимательской деятельности без регистрации, если это деяние сопряжено с извлечением дохода в крупном размере»). Бизнесмена оштрафовали на 50 тысяч рублей.<br><br>Юлия присоединилась к команде  в 2010 году, став одним из первых авторов, кто системно освещал развитие онлайн-гемблинга в России и мире. За годы работы она создала тысячи материалов, фиксируя ключевые события: от легализации ставок в отдельных штатах США до появления первых криптовалютных казино.<br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Осуждение <a href="https://t.me/Stake_free_officiaL" target="_blank">https://t.me/Stake_free_officiaL</a> организатора нелегального игорного бизнеса<br><br><br><br>И теперь владельцу ижевского нелегального придется раскошелиться на штраф в сумме 50 тысяч рублей. Согласно данным пресс-службы Прокуратуры Удмуртской Республики, сей предприниматель открыл игорное заведение, расположив его в подвале одного из домов по улице Красной. Иказинопринесло ему с ноября 2010 г. по январь этого года дохода в 2 миллиона рублей.<br><br>Суд признал ижевчанина виновным в совершении преступления, которое предусмотрено ч. 1 ст. 171 УК РФ (речь о «Незаконном предпринимательстве, то есть осуществлении предпринимательской деятельности без регистрации, если это деяние сопряжено с извлечением дохода в крупном размере»). Бизнесмена оштрафовали на 50 тысяч рублей.<br><br>Юлия присоединилась к команде  в 2010 году, став одним из первых авторов, кто системно освещал развитие онлайн-гемблинга в России и мире. За годы работы она создала тысячи материалов, фиксируя ключевые события: от легализации ставок в отдельных штатах США до появления первых криптовалютных казино.<br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osnovnye-preimuschestva-soversheniya-elektronnyh-p.html">Основные преимущества совершения электронных платежей в интернет казино ✌ Дневник @Tamila1 на</a></li>
-<li><a href="ostrov-actekov-ischem-klad-vmeste-dnevnik-anna-na.html">Остров Ацтеков: ищем клад вместе! ✌ Дневник @Anna на</a></li>
-<li><a href="ostrov-mavrikiy-otkryt-dlya-azartnyh-turistov-dnev.html">Остров Маврикий открыт для азартных туристов ✌ Дневник @Olga1 на</a></li>
+<li><a href="ostorozhno-kazino-manipuliruet-igrokami-dnevnik-ig.html">Осторожно! Казино манипулирует игроками! ✌ Дневник @igor на</a></li>
+<li><a href="osobennosti-igornogo-biznesa-v-zapadnoevropeyskih-.html">Особенности игорного бизнеса в западноевропейских странах ✌ Дневник @Tamila1 на</a></li>
+<li><a href="osnovy-bankroll-menedzhmenta-dnevnik-anna-na.html">Основы банкролл менеджмента ✌ Дневник @Anna на</a></li>
 </ul></div>
 </body>
 </html>
