--- a/osuzhdennyy-za-ubiystvo-vladelca-kazino-uveryaet-c.html
+++ b/osuzhdennyy-za-ubiystvo-vladelca-kazino-uveryaet-c.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Осужденный за убийство владельца казино уверяет, что невиновен.</title>
 <meta name="description" content="Осужденный за убийство владельца казино уверяет, что невиновен. Рик Табиш, пребывающий в заключении с 2000 года за убийство хозяина казино «Подкова Биньона»…">
-<link rel="canonical" href="https://casino-list.deno.dev/osuzhdennyy-za-ubiystvo-vladelca-kazino-uveryaet-c.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/osuzhdennyy-za-ubiystvo-vladelca-kazino-uveryaet-c.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Осужденный за убийство владельца казино уверяет, что невиновен.</h1>
-<div class="card"><p>Осужденный за убийство владельца казино уверяет, что невиновен.<br><br><br><br>Рик <a href="https://t.me/Irwin_tg_casinO" target="_blank">https://t.me/Irwin_tg_casinO</a> Табиш, пребывающий в заключении с 2000 года за убийство хозяина казино «Подкова Биньона» Теди Биньона, уверен, что в скором времени он и его подружка Санди Марфи окажутся на свободе и будут оправданы. Заключенный на срок 25 лет заявляет, что он не виновен. Адвокат семейства Биньон заявляет со своей стороны, что Суд подтвердит приговор.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Осужденный за <a href="https://t.me/Irwin_tg_casinO" target="_blank">https://t.me/Irwin_tg_casinO</a> убийство владельца казино уверяет, что невиновен.<br><br><br><br>Рик Табиш, пребывающий в заключении с 2000 года за убийство хозяина казино «Подкова Биньона» Теди Биньона, уверен, что в скором времени он и его подружка Санди Марфи окажутся на свободе и будут оправданы. Заключенный на срок 25 лет заявляет, что он не виновен. Адвокат семейства Биньон заявляет со своей стороны, что Суд подтвердит приговор.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-igornyh-zavedeniy-s-mgnovennymi-vyplat.html">Особенности игорных заведений с мгновенными выплатами ✌ Дневник @igor на</a></li>
-<li><a href="osobennosti-igornogo-biznesa-v-zapadnoevropeyskih-.html">Особенности игорного бизнеса в западноевропейских странах ✌ Дневник @Tamila1 на</a></li>
-<li><a href="osobennosti-bitkoin-kazino-dnevnik-anna-na.html">Особенности биткоин казино ✌ Дневник @Anna на</a></li>
+<li><a href="osobye-pravila-etiketa-pri-igre-v-ruletku-dnevnik-.html">Особые правила этикета при игре в рулетку ✌ Дневник @Tamila1 на</a></li>
+<li><a href="osobennosti-razdachi-ochkov-loyalnosti-v-igrah-kaz.html">Особенности раздачи очков лояльности в играх казино ✌ Дневник @igor на</a></li>
+<li><a href="osobennosti-offlayn-puteshestviya-dnevnik-abstint-.html">Особенности оффлайн путешествия ✌ Дневник @Abstint на</a></li>
 </ul></div>
 </body>
 </html>
