--- a/otel-s-kazino-na-laynere-koroleva-mariya.html
+++ b/otel-s-kazino-na-laynere-koroleva-mariya.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Отель с казино на лайнере «Королева Мария».</title>
 <meta name="description" content="Отель с казино на лайнере «Королева Мария». Совершив прощальный круиз, огромных размеров океанский лайнер «Королева Мария» бросил якорь в гавани Гамбургера.">
-<link rel="canonical" href="https://casino-list.deno.dev/otel-s-kazino-na-laynere-koroleva-mariya.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/otel-s-kazino-na-laynere-koroleva-mariya.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Отель с казино на лайнере «Королева Мария».</h1>
-<div class="card"><p>Отель с казино на <a href="https://t.me/AUF_gameS_official" target="_blank">https://t.me/AUF_gameS_official</a> лайнере «Королева Мария».<br><br><br><br>Совершив прощальный круиз, огромных размеров океанский лайнер «Королева Мария» бросил якорь  в гавани Гамбургера.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Отель с казино на лайнере «Королева Мария».<br><br><br><br>Совершив прощальный круиз, огромных <a href="https://t.me/AUF_gameS_official" target="_blank">https://t.me/AUF_gameS_official</a> размеров океанский лайнер «Королева Мария» бросил якорь в гавани Гамбургера.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-turnirnogo-blekdzheka-dnevnik-igor-na.html">Особенности турнирного блэкджека ✌ Дневник @igor на</a></li>
-<li><a href="osobennosti-onlayn-igry-v-blekdzhek-s-zhivym-krupe.html">Особенности онлайн игры в блэкджек с живым крупье ✌ Дневник @casino-x на</a></li>
-<li><a href="ostrov-actekov-ischem-klad-vmeste-dnevnik-anna-na.html">Остров Ацтеков: ищем клад вместе! ✌ Дневник @Anna на</a></li>
+<li><a href="ostorozhno-kappery-moshenniki-dnevnik-igor-na.html">Осторожно: капперы мошенники ✌ Дневник @igor на</a></li>
+<li><a href="ostorozhno-kazino-manipuliruet-igrokami-dnevnik-ig.html">Осторожно! Казино манипулирует игроками! ✌ Дневник @igor на</a></li>
+<li><a href="osobennosti-kitayskih-kazino-oflayn-i-onlayn.html">Особенности китайских казино офлайн и онлайн</a></li>
 </ul></div>
 </body>
 </html>
